# INF4710-TP3

./: .gitignore  .gitmodules  meson.build
benchmarks/: .clang  common.hpp  dilation.cpp  edge_ratio.cpp  meson.build  sobel.cpp  threshold.cpp  threshold_components.cpp  threshold_implementations.cpp
data/: .directory
report/: .gitignore  report.Rnw
src/: cl_mat.hpp  dilation.cpp  dilation.hpp  edge_ratio.cpp  edge_ratio.hpp  main.cpp  opencl.cpp  opencl.hpp  sobel.cpp  sobel.hpp  threshold.cpp  threshold.hpp
src/opencl/: dilation.cl  sobel.cl  threshold.cl
subprojects/hayai/: meson.build
tests/: common.hpp  dilation.cpp  edge_ratio.cpp  integration.cpp  meson.build  sobel.cpp  threshold.cpp
tests/pch/: pch.hpp
